Add models, collections, and views to todo sample app

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>jQuery+RequireJS Sample Page</title>
-        <!-- This is a special version of jQuery with RequireJS built-in -->
+        <title>Page</title>
         <script data-main="js/main" src="js/assets/require-jquery.js"></script>
+		<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     </head>
     <body>
-        <h1>jQuery+RequireJS Sample Page</h1>
-        <p>Look at source or inspect the DOM to see how it works.</p>
+        <div id="mainDiv"></div>
     </body>
 </html>
